--- a/src/Styles/Navbar.scss
+++ b/src/Styles/Navbar.scss
@@ -1,4 +1,4 @@
-.navbar{
-    border: 1px solid var(--download-8-silver, #CCC);
-    height: 56px;
-}
+// .navbar{
+//     border: 1px solid var(--download-8-silver, #CCC);
+//     height: 56px;
+// }
