--- a/src/index.css
+++ b/src/index.css
@@ -669,3 +669,77 @@
   display: flex;
   align-items: center;
 }
+
+.category-card {
+  border: none;
+  border-radius: 8px;
+  overflow: hidden;
+  transition: transform 0.2s ease;
+  margin-bottom: 20px;
+}
+
+.category-card img {
+  width: 100%;
+  height: 130px;
+  object-fit: cover;
+}
+
+/* .category-card:hover {
+  transform: scale(1.05);
+} */
+
+.category-info {
+  padding: 10px;
+  background-color: #ff7f00;
+}
+
+.category-info h5 {
+  margin: 0;
+  font-size: 1.2em;
+  color: white;
+}
+
+.category-info button {
+  margin-top: 10px;
+  padding: 5px 20px;
+  border: none;
+  background-color: white;
+  color: #ff7f00;
+  font-weight: bold;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 15px;
+}
+
+.category-info button:hover {
+  background-color: white;
+}
+
+.card {
+  margin-bottom: 20px;
+}
+.card img {
+  border-radius: 8px;
+  height: 200px;
+  object-fit: cover;
+}
+.card-body {
+  padding: 15px;
+}
+.category-btn {
+  background-color: #e0e0e0;
+  color: black;
+  font-size: 0.8em;
+  border: none;
+  border-radius: 20px;
+  padding: 5px 10px;
+  margin: 5px;
+  cursor: default;
+}
+.location {
+  font-size: 0.9em;
+  color: gray;
+}
+.location i {
+  margin-right: 5px;
+}
