--- a/src/index.css
+++ b/src/index.css
@@ -259,66 +259,6 @@
   height: 300px;
 }
 
-@media (max-width: 900px) {
-  .Carousel_img_box {
-    width: 100%;
-    height: 300px;
-  }
-
-
-}
-
-@media (max-width: 700px) {
-  .Carousel_img_box {
-    width: 100%;
-    height: 200px;
-  }
-
-
-}
-
-@media (max-width: 768.98px) {
-  .offer_search_section_hp {
-    padding: 15px;
-    border-radius: 8px;
-    background-color: #ffdfd5;
-  }
-
-  .search-offer.offer_search_section_hp {
-    flex-direction: column;
-  }
-
-  .search-offer.offer_search_section_hp select {
-    width: 100%;
-    border-color: #808080;
-  }
-
-  .notification-panel {
-    width: 280px;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    margin-top: -10px;
-    z-index: 99990;
-  }
-
-  .notification-content p {
-    margin: 0;
-    font-size: 12px;
-  }
-  .Carousel_img_one {
-    height: 200px;
-  }
-}
-
-@media (max-width: 700px) {
-  .home-modal {
-    width: 90%;
-
-  }
-}
-
 
 .button-submit {
   padding: 7px 10px;
@@ -781,3 +721,81 @@
 /* .Carousel_img_translate3d .carousel .slider-wrapper .slider {
   transform: translate3d(0%, 0px, 0px) !important;
 } */
+
+
+
+@media (max-width: 900px) {
+  .Carousel_img_box {
+    width: 100%;
+    height: 300px;
+  }
+
+
+}
+
+@media (max-width: 700px) {
+  .Carousel_img_box {
+    width: 100%;
+    height: 200px;
+  }
+
+
+}
+
+@media (max-width: 768.98px) {
+  .offer_search_section_hp {
+    padding: 15px;
+    border-radius: 8px;
+    background-color: #ffdfd5;
+  }
+
+  .search-offer.offer_search_section_hp {
+    flex-direction: column;
+  }
+
+  .search-offer.offer_search_section_hp select {
+    width: 100%;
+    border-color: #808080;
+  }
+
+  .notification-panel {
+    width: 280px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin-top: -10px;
+    z-index: 99990;
+  }
+
+  .notification-content p {
+    margin: 0;
+    font-size: 12px;
+  }
+
+  .Carousel_img_one {
+    height: 200px;
+  }
+}
+
+@media (max-width: 700px) {
+  .home-modal {
+    width: 90%;
+
+  }
+}
+
+@media (max-width: 500px) {
+  .Carousel_img_one {
+    height: 150px;
+    object-fit: fill;
+  }
+
+  .card img {
+    height: 150px;
+    object-fit: fill;
+  }
+  .moblie-bottom{
+    margin-bottom: 50px;
+  }
+}
