--- a/src/Styles/Shop.scss
+++ b/src/Styles/Shop.scss
@@ -138,6 +138,8 @@
     width: 90%;
     margin: auto;
     margin-top: 20px;
+    margin-bottom: 20px;
+
   }
 }
 
@@ -146,6 +148,7 @@
     width: 90%;
     margin: auto;
     margin-top: 20px;
+    margin-bottom: 20px;
   }
 }
 
@@ -155,7 +158,7 @@
     margin: auto;
     display: flex;
     flex-direction: column;
-
+    margin-bottom: 20px;
     .card-image {
       width: 100%;
     }
