--- a/src/Components/Deals/DealsNavbar.css
+++ b/src/Components/Deals/DealsNavbar.css
@@ -1,8 +1,8 @@
 .coming-soon-container {
-    position: absolute;
+    /* position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
     text-align: center;
     background-color: #fff;
     padding: 40px;
